[tool.poetry]
name = "PyOPIA"
version = "0"
description = "A Python Ocean Particle Image Analysis toolbox."
authors = [
    "Emlyn Davies <emlyn.davies@sintef.no>",
    "Alex Nimmo Smith@plymouth.ac.uk <alex.nimmo.smith@plymouth.ac.uk>"
]
readme = "README.md"
repository = "https://github.com/sintef/pyopia"
documentation = "https://pyopia.readthedocs.io"
keywords = ["Ocean", "Particles", "Imaging", "Measurement", "Size distribution"]
packages = [{include = "pyopia"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
flake8 = "^6.1.0"
numpy = "^1.24.0"
scipy = "^1.11.2"
scikit-image = "^0.21.0"
pytest = ">=7.2.0"
imageio = "^2.31.3"
matplotlib = ">=3.7"
tqdm = "^4.66.1"
pytest-error-for-skips = "^2.0.2"
nbclient = "0.7"
sphinx = "5.0"
sphinx-rtd-theme = ">=0.5.0"
sphinxcontrib-napoleon = ">=0.7"
sphinx-togglebutton = "^0.3.2"
sphinx-copybutton = "^0.5.2"
readthedocs-sphinx-search = "^0.3.2"
myst-nb = "^0.17.2"
jupyter-book = "^0.15.1"
ipykernel = ">=6.19.4"
urllib3 = "<2.0"
gdown = "^4.7.1"
cmocean = "^3.0.3"
toml = "^0.10.2"
xarray = "^2023.8.0"
typer = {extras = ["all"], version = "^0.9.0"}
pandas = {version = "^2.1.1", extras = ["computation"]}
h5py = "^3.9.0"
poetry-version-plugin = "^0.2.0"
tensorflow-macos = {version = "2.11.0", optional = true, markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
tensorflow-cpu = {version = "2.11.0", optional = true}
tensorflow-io-gcs-filesystem = [
    {version = ">=0.31.0", optional=true}
]
nbconvert = "^7.16.4"

[tool.poetry.extras]
classification-arm64 = ["tensorflow-io-gcs-filesystem", "tensorflow-macos"]
classification = ["tensorflow-io-gcs-filesystem", "tensorflow-cpu"]

[tool.poetry-version-plugin]
source = "init"

[tool.poetry.scripts]
pyopia = "pyopia.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
