[tool.poetry]
name = "PyOPIA"
version = "0"
description = "A Python Ocean Particle Image Analysis toolbox."
authors = [
    "Emlyn Davies <emlyn.davies@sintef.no>",
    "Alex Nimmo Smith@plymouth.ac.uk <alex.nimmo.smith@plymouth.ac.uk>"
]
readme = "README.md"
repository = "https://github.com/sintef/pyopia"
documentation = "https://pyopia.readthedocs.io"
keywords = ["Ocean", "Particles", "Imaging", "Measurement", "Size distribution"]
packages = [{include = "pyopia"}]

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^6.1.0"
numpy = "^1.24.0"
scipy = "^1.11.2"
pytest = ">=7.2.0"
imageio = "^2.31.3"
matplotlib = ">=3.7"
tqdm = "^4.66.1"
pytest-error-for-skips = "^2.0.2"
nbclient = "0.7"
sphinx = "5.0"
sphinx-rtd-theme = ">=0.5.0"
sphinxcontrib-napoleon = ">=0.7"
sphinx-togglebutton = "^0.3.2"
sphinx-copybutton = "^0.5.2"
readthedocs-sphinx-search = "^0.3.2"
myst-nb = "^0.17.2"
jupyter-book = "^0.15.1"
ipykernel = ">=6.19.4"
urllib3 = "<2.0"
gdown = "^4.7.1"
cmocean = "^3.0.3"
toml = "^0.10.2"
xarray = "^2023.12.0"
typer = {extras = ["all"], version = "^0.9.0"}
pandas = {version = "^2.1.1", extras = ["computation"]}
h5py = "^3.9.0"
poetry-version-plugin = "^0.2.0"
tensorflow-macos = {version = "^2.16.2", optional = true, markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
tensorflow-cpu = {version = "^2.16.2", optional = true}
dask = ">=2024.8.1"
nbconvert = "^7.16.4"
h5netcdf = ">= 1.3.0"
scikit-image = "^0.24.0"

[tool.poetry.extras]
classification-arm64 = ["tensorflow-macos"]
classification = ["tensorflow-cpu"]

[tool.poetry-version-plugin]
source = "init"

[tool.poetry.scripts]
pyopia = "pyopia.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
