[project]
name = "PyOPIA"
version = "2.9.0"
description = "A Python Ocean Particle Image Analysis toolbox."
authors = [
    { name = "Emlyn Davies", email = "emlyn.davies@sintef.no" },
    { name = "Alex Nimmo Smith@plymouth.ac.uk", email = "alex.nimmo.smith@plymouth.ac.uk" },
]
requires-python = "~=3.12"
readme = "README.md"
keywords = [
    "Ocean",
    "Particles",
    "Imaging",
    "Measurement",
    "Size distribution",
]
dependencies = [
    "flake8>=6.1.0,<7",
    "numpy>=1.24.0",
    "scipy>=1.11.2,<2",
    "pytest>=7.2.0",
    "imageio>=2.31.3,<3",
    "matplotlib>=3.7",
    "tqdm>=4.66.1,<5",
    "pytest-error-for-skips>=2.0.2,<3",
    "nbclient==0.7",
    "sphinx==5.0",
    "sphinx-rtd-theme>=0.5.0",
    "sphinxcontrib-napoleon>=0.7",
    "sphinx-togglebutton>=0.3.2,<0.4",
    "sphinx-copybutton>=0.5.2,<0.6",
    "readthedocs-sphinx-search>=0.3.2,<0.4",
    "myst-nb>=0.17.2,<0.18",
    "jupyter-book>=0.15.1,<0.16",
    "ipykernel>=6.19.4",
    "urllib3<2.0",
    "gdown>=4.7.1,<5",
    "cmocean>=3.0.3,<4",
    "toml>=0.10.2,<0.11",
    "xarray>=2023.12.0,<2024",
    "typer[all]>=0.9.0,<0.10",
    "pandas[computation]>=2.1.1,<3",
    "h5py>=3.9.0,<4",
    "poetry-version-plugin>=0.2.0,<0.3",
    "dask>=2024.8.1",
    "nbconvert>=7.16.4,<8",
    "h5netcdf>= 1.3.0",
    "scikit-image>=0.24.0,<0.25",
    "tensorflow-io>=0.37.1",
]

[project.optional-dependencies]

classification = [
    "tensorflow>=2.19.0",
    "keras==3.9.1",
]

[project.urls]
Repository = "https://github.com/sintef/pyopia"
Documentation = "https://pyopia.readthedocs.io"

[project.scripts]
pyopia = "pyopia.cli:app"

[tool.hatch.build.targets.sdist]
include = ["pyopia"]

[tool.hatch.build.targets.wheel]
include = ["pyopia"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry-version-plugin]
source = "init"

[tool.setuptools_scm]
