[metadata]
name = pyopia
version = attr: pyopia.__version__
description = A Python Ocean Particle Image Analysis toolbox.
classifiers = 
    Development Status :: 2 - Pre-Alpha,
    Intended Audience :: Developers,
    Natural Language :: English,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.10,


[options]
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
